--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,12 @@
 *.so
 *.dylib
 
-# Test binary, build with `go test -c`
+# Output
 *.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*.log
+*.xls
+*.xlsx
 
 # IDE Files
 /.idea
